Bug 127610 - NB Tabbed View Not Centered (macOS), tab titles seem shifted to the right (to bug 161311 for residual)
Summary: NB Tabbed View Not Centered (macOS), tab titles seem shifted to the right (to...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.1.4.2 release
Hardware: All macOS (All)
: medium normal
Assignee: Not Assigned
URL: https://ask.libreoffice.org/t/graphic...
Whiteboard: target:25.2.0 target:24.2.7 target:24...
Keywords:
: 151809 153951 154023 157722 162437 163379 (view as bug list)
Depends on:
Blocks: macOS-UI-polish Notebookbar-Tabbed
  Show dependency treegraph
 
Reported: 2019-09-17 22:13 UTC by Spood
Modified: 2025-05-25 14:30 UTC (History)
13 users (show)

See Also:
Crash report or crash signature:


Attachments
View of Tabbed UI (116.94 KB, image/png)
2019-09-17 22:15 UTC, Spood
Details
Tabbed UI (335.08 KB, image/png)
2021-07-13 09:24 UTC, plekborian
Details
Snapshot with https://gerrit.libreoffice.org/c/core/+/172301/2 (581.81 KB, image/png)
2024-08-27 22:57 UTC, Patrick (volunteer)
Details
Snapshot of character dialog in Writer with Asian and CTL text enabled (939.11 KB, image/png)
2024-08-28 12:11 UTC, Patrick (volunteer)
Details
bug still present on 24.8.2.1 (952.31 KB, image/png)
2024-09-28 01:23 UTC, BenTpe
Details
fix confirmed in 24.8.2.1 (2.00 MB, image/png)
2024-09-30 10:44 UTC, steve
Details
full-width view of the window, showing the toolbar isn't aligned to its background (131.04 KB, image/png)
2024-10-09 03:35 UTC, BenTpe
Details
Misalignment of tab bar before fix (581.63 KB, image/png)
2024-10-13 14:01 UTC, Patrick (volunteer)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Spood 2019-09-17 22:13:36 UTC
Description:
Platform: OSX 10.14.6 (Mojave) LO Version: 6.3.1.2

View | User Interface | Tabbed The Tabs are not central. When initially opening this looks strange and despite resizing the window the Tabs are always skewed to the right. Reference screenshot.

C:\fakepath\Screen Shot 2019-09-17 at 08.41.27.png

Steps to Reproduce:
1.View
2.User Interface
3.Tabbed

Actual Results:
Tabs are skewed to the right

Expected Results:
Tabs should be central


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Spood 2019-09-17 22:15:05 UTC
Created attachment 154239 [details]
View of Tabbed UI
Comment 2 Roman Kuznetsov 2019-09-21 13:58:29 UTC
confirm for

Version: 6.4.0.0.alpha0+
Build ID: 98519e6e4da252c717e2018d4800a00115101bc3
CPU threads: 4; OS: Mac OS X 10.14.6; UI render: GL; VCL: osx; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2019-09-18_07:14:28
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Xisco Faulí 2019-09-26 15:23:39 UTC
I believe it's related to bug 126266.
I'll try to bisect it later...
Comment 4 Spood 2020-01-29 22:07:21 UTC
Just to add that I downloaded and tried out 
Version: 6.4.0.3 for Mac OSX
Build ID: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
The issue remains as reported for previous release?
Comment 5 Peter Robinson 2020-06-13 08:38:20 UTC
Downloaded and tried out
 
Version: 7.0.0.0.beta1
Build ID: 94f789cbb33335b4a511c319542c7bdc31ff3b3c
CPU threads: 8; OS: Mac OS X 10.15.5; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

on Mac running OS Catalina - issue still remains as reported for previous release,

Pity as doesn't make for nice user experience.
Comment 6 plekborian 2021-07-13 09:24:22 UTC
Created attachment 173527 [details]
Tabbed UI
Comment 7 plekborian 2021-07-13 09:24:55 UTC
Version: 7.1.4.2 / LibreOffice Community
Build ID: a529a4fab45b75fefc5b6226684193eb000654f6
CPU threads: 8; OS: Mac OS X 10.15.7; UI render: default; VCL: osx
Locale: en-ID (en_ID.UTF-8); UI: en-US
Calc: threaded

issue tabbed on center
Comment 8 eisa01 2023-03-18 19:06:18 UTC
*** Bug 151809 has been marked as a duplicate of this bug. ***
Comment 9 eisa01 2023-03-18 19:06:58 UTC
*** Bug 153951 has been marked as a duplicate of this bug. ***
Comment 10 eisa01 2023-03-18 19:07:13 UTC
*** Bug 154023 has been marked as a duplicate of this bug. ***
Comment 11 stragu 2023-10-13 22:32:58 UTC
*** Bug 157722 has been marked as a duplicate of this bug. ***
Comment 12 Tex2002ans 2023-11-15 23:09:32 UTC
Within the past month, there were 2 more Mac users with this issue:

- https://www.reddit.com/r/libreoffice/comments/17gmkiu/lo_for_mac_762_menu_not_aligned_is_there_a_fix/k6nxpni/
- https://www.reddit.com/r/libreoffice/comments/17vo5ji/somethings_wrong_with_my_ui/

They both complained about the "overlapping"/"misaligned" Tabbed View.

(The one user's photo looked exactly like the attachment in duplicate #157722.)
Comment 13 Tex2002ans 2023-12-04 19:59:09 UTC
And 1 more Mac user with this issue:

- https://www.reddit.com/r/libreoffice/comments/18ampca/did_i_do_something_wrong_or_tabbed_is_just_broken/
Comment 14 andscape 2024-04-11 06:24:47 UTC
Still have this problem.

Version: 24.2.1.2 (AARCH64) / LibreOffice Community
Build ID: db4def46b0453cc22e2d0305797cf981b68ef5ac
CPU threads: 10; OS: macOS 14.4.1; UI render: Skia/Metal; VCL: osx
Locale: en-ID (en_ID.UTF-8); UI: en-US
Calc: threaded

Has there been any progress here?
Comment 15 robigan 2024-04-28 12:10:07 UTC
Same here on 2021 M1 Pro MBP Pro 14"

Version: 24.2.2.2 (AARCH64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 8; OS: macOS 14.4.1; UI render: Skia/Metal; VCL: osx
Locale: en-US (en_IT.UTF-8); UI: en-US
Calc: threaded
Comment 16 stragu 2024-05-29 05:00:17 UTC
*** Bug 161311 has been marked as a duplicate of this bug. ***
Comment 17 Patrick (volunteer) 2024-08-22 21:09:32 UTC
I think that I have a fix for this bug in the following patch. It works on macOS but I would like to know if it causes any positioning bugs on Windows or Linux:

https://gerrit.libreoffice.org/c/core/+/172301
Comment 18 Patrick (volunteer) 2024-08-27 22:57:44 UTC
Created attachment 196055 [details]
Snapshot with https://gerrit.libreoffice.org/c/core/+/172301/2
Comment 19 Patrick (volunteer) 2024-08-28 12:11:10 UTC
Created attachment 196062 [details]
Snapshot of character dialog in Writer with Asian and CTL text enabled
Comment 20 Patrick (volunteer) 2024-08-28 12:13:02 UTC
(In reply to Patrick (volunteer) from comment #19)
> Created attachment 196062 [details]
> Snapshot of character dialog in Writer with Asian and CTL text enabled

Note: the above snapsnot was taken in the following LibreOffice version:

Version: 24.8.0.3 (AARCH64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 8; OS: macOS 15.0; UI render: Skia/Metal; VCL: osx
Locale: en-CA (en_CA.UTF-8); UI: en-US
Calc: threaded
Comment 21 Commit Notification 2024-08-28 13:23:33 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d3dd080524d98bcf0560d3b54ad2309610b22c20

tdf#127610 subtract width of shortcuts from width available for tab items

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2024-08-29 05:44:32 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/553e1ae91bf66728dfb3d9f14b3abefae1d279c6

tdf#127610 subtract width of shortcuts from width available for tab items

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Commit Notification 2024-08-29 05:44:36 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/4e6a47b003e16577b29993028844ca99861d033d

tdf#127610 subtract width of shortcuts from width available for tab items

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Patrick (volunteer) 2024-08-29 12:02:57 UTC
I have committed a fix this bug. The fix should be in today's (29 August 2024) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for macOS testers: the nightly master build installer does not overwrite any LibreOffice official versions. Instead, it will be installed as a separate application called "LibreOfficeDev" in the /Applications folder.

Because this is a "test" build, you will need to do the following steps before you launch the LibreOfficeDev application:

1. Go to the Finder and navigate to the /Applications/Utilities folder
2. Launch the "Terminal" application
3. Paste the following command in the Terminal application window and press the Return key to execute the command:

   xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 25 Buovjaga 2024-09-25 14:05:37 UTC
*** Bug 162437 has been marked as a duplicate of this bug. ***
Comment 26 BenTpe 2024-09-28 01:21:22 UTC
Hi I am sorry but the bug hasn’t been fixed, its still there on my mac…
Screenshot 2024-09-28 at 09.20.48
Comment 27 BenTpe 2024-09-28 01:23:47 UTC
Created attachment 196760 [details]
bug still present on 24.8.2.1
Comment 28 steve 2024-09-30 10:44:21 UTC
Created attachment 196793 [details]
fix confirmed in 24.8.2.1

fix confirmed in Version: 24.8.2.1 (AARCH64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 12; OS: macOS 14.7; UI render: Skia/Metal; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@BenTpe: If I compare the first screenshot in this bug with what can be seen in 24.8.2.1 (see my attached screenshot), I see that the tabbed view is now centered. Is that not the case for you?

Your screenshot is cut off on the right side. Can you please provide a full-width screenshot.
Comment 29 BenTpe 2024-10-09 03:34:06 UTC
hi, sorry for delayed answer.

I think I may not have been precise enough. the toolbar (and adjacent buttons) are not "centered" to the underlying frame, which leads me to think it's not centered.
Comment 30 BenTpe 2024-10-09 03:35:03 UTC
Created attachment 196971 [details]
full-width view of the window, showing the toolbar isn't aligned to its background
Comment 31 stragu 2024-10-09 12:42:45 UTC
Looking at screenshots from Patrick (attachment 196055 [details]) and Steve (attachment 196793 [details]) which were taken with the patch applied, the issue that is described in the screenshots of the duplicates remains, please see:
- attachment 190165 [details] 
- attachment 185800 [details] 
- attachment 185738 [details]
- attachment 185601 [details]
- attachment 195804 [details]
... which is the same issue that BenTpe describes in attachment 196971 [details].

Reopening this bug.
Comment 32 Patrick (volunteer) 2024-10-09 13:14:32 UTC
Unassigning myself. I fixed the original bug that caused the tool buttons to be shifted off the right edge of the window so now all items are visible.

If you are changing the scope of this bug to something else, then someone else can fix that.
Comment 33 Buovjaga 2024-10-10 17:23:53 UTC
*** Bug 163379 has been marked as a duplicate of this bug. ***
Comment 34 steve 2024-10-13 12:05:46 UTC
Not quite sure i agree here. Titel says "NB Tabbed View Not Centered (macOS), tab titles seem shifted to the right". If the remaining issue of the background not correctly aligning is what we are discussing now, that imo is a different bug and should be filed separately. 

Initial screenshot from 2019 is https://bug-attachments.documentfoundation.org/attachment.cgi?id=154239 and that shows the buttons NOT centered and shifted to the right, as described in the bug title.

What am I missing, that now we are discussing another issue which is about background not correctly aligning while the reported problem has been addressed?

I am not saying the bug BenTpe is seeing with the background frame isn't real. But please file a new issue for that as per the one issue per bug policy, as it is a separate bug. Link this issue here in the see also: section.
Comment 35 V Stuart Foote 2024-10-13 13:28:19 UTC
For Patrick's tweak in https://gerrit.libreoffice.org/c/core/+/172500 does the  lcl_AdjustSingleLineTabs(nMaxWidth - nShortcutsWidth, mpTabCtrlData.get()) need to also subtract the "nHamburgerWidth" or is that included in the nShortcutsWidth?
Comment 36 Patrick (volunteer) 2024-10-13 13:56:17 UTC
(In reply to V Stuart Foote from comment #35)
> For Patrick's tweak in https://gerrit.libreoffice.org/c/core/+/172500 does
> the  lcl_AdjustSingleLineTabs(nMaxWidth - nShortcutsWidth,
> mpTabCtrlData.get()) need to also subtract the "nHamburgerWidth" or is that
> included in the nShortcutsWidth?

Yes. Look at my attachment #196055 [details] and you will see that the two empty spaces on the left and right ends of the "tab bar" are equal. That was the bug I fixed: the tab bar is now centered between the group of toolbar buttons on the left and the hamburger button on the right.

What happened is that this bug was hijacked by several people who don't like my fix and, instead, want the tab bar to be centered in the window (i.e. the distance from the left and right edges from the tab bar to the edge of the window are equal).

I am not opposed to centering in the window. I am just no interested in doing that work.
Comment 37 Patrick (volunteer) 2024-10-13 14:01:40 UTC
Created attachment 197030 [details]
Misalignment of tab bar before fix

This attachment shows the original bug that I fix in https://gerrit.libreoffice.org/c/core/+/172301. With smaller window sizes (e.g. the default window size on my 14" MacBook Pro), the tab bar is shifted way partly off the right edge of the window and the tab bar obscures the hamburger.

If the tab bar was moved to the center of the window, in my case the tab bar's left edge would obscure some the of the toolbar buttons on the left.
Comment 38 Buovjaga 2024-10-25 10:52:14 UTC
(In reply to BenTpe from comment #30)
> Created attachment 196971 [details]
> full-width view of the window, showing the toolbar isn't aligned to its
> background

Please open new reports for any other issues.
Comment 39 Emily McLean 2024-10-25 11:22:25 UTC
(In reply to Buovjaga from comment #38)
> (In reply to BenTpe from comment #30)
> > Created attachment 196971 [details]
> > full-width view of the window, showing the toolbar isn't aligned to its
> > background
> 
> Please open new reports for any other issues.

You've marked other bugs describing the specific issue raised by BenTpe (and maybe Spood considering what they meant by "central" is under debate) as duplicates of this one (see bug 163379, also bug 162437, bug 157722, bug 154023, and bug 185738). Surely either this issue is not fixed or they should be marked as duplicates of another bug.
Comment 40 Emily McLean 2024-10-25 11:26:17 UTC
Sorry that last reference should have been bug 154023
Comment 41 Buovjaga 2024-10-25 13:19:29 UTC
Ok, I opened BenTpe's bug 161311.