tdf#127610 subtract width of shortcuts from width available for tab items

Change-Id: Ia520f6b982e52e7154b3b02ba77562a3b212efd1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172301
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins